add car photo and update happy client

--- a/car.html
+++ b/car.html
@@ -81,7 +81,7 @@
     					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car-img2.jpeg);">
     					</div>
     					<div class="text">
-    						<h2 class="mb-0"><a href="car-single.html">Mercedes Grand Sedan</a></h2>
+    						<h2 class="mb-0"><a href="car-single.html">Toyota Innova</a></h2>
     						<div class="d-flex mb-3">
 	    						<!-- <span class="cat">SUV</span>
 	    						<p class="price ml-auto">₹500 <span>/day</span></p> -->
@@ -92,10 +92,10 @@
     			</div>
     			<div class="col-md-4">
     				<div class="car-wrap rounded ftco-animate">
-    					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car-img2.jpeg);">
+    					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car-img5.jpeg);">
     					</div>
     					<div class="text">
-    						<h2 class="mb-0"><a href="car-single.html">Range Rover</a></h2>
+    						<h2 class="mb-0"><a href="car-single.html">Innova Crysta</a></h2>
     						<div class="d-flex mb-3">
 	    						<!-- <span class="cat">Subaru</span>
 	    						<p class="price ml-auto">₹500 <span>/day</span></p> -->
@@ -106,10 +106,10 @@
     			</div>
     			<div class="col-md-4">
     				<div class="car-wrap rounded ftco-animate">
-    					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car-img3.jpeg);">
+    					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car-img6.jpeg);">
     					</div>
     					<div class="text">
-    						<h2 class="mb-0"><a href="car-single.html">Mercedes Grand Sedan</a></h2>
+    						<h2 class="mb-0"><a href="car-single.html">Tempo Traveller</a></h2>
     						<div class="d-flex mb-3">
 	    						<!-- <span class="cat">SUV</span>
 	    						<p class="price ml-auto">₹500 <span>/day</span></p> -->
@@ -121,10 +121,10 @@
 
     			<div class="col-md-4">
     				<div class="car-wrap rounded ftco-animate">
-    					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car-img4.jpeg);">
+    					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car-img7.webp);">
     					</div>
     					<div class="text">
-    						<h2 class="mb-0"><a href="car-single.html">Mercedes Grand Sedan</a></h2>
+    						<h2 class="mb-0"><a href="car-single.html">Swift Dzyre</a></h2>
     						<div class="d-flex mb-3">
 	    						<!-- <span class="cat">SUV</span>
 	    						<p class="price ml-auto">₹500 <span>/day</span></p> -->
@@ -138,7 +138,7 @@
     					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car-img1.jpeg);">
     					</div>
     					<div class="text">
-    						<h2 class="mb-0"><a href="car-single.html">Range Rover</a></h2>
+    						<h2 class="mb-0"><a href="car-single.html">Innova Hycross</a></h2>
     						<div class="d-flex mb-3">
 	    						<!-- <span class="cat">Subaru</span>
 	    						<p class="price ml-auto">₹500 <span>/day</span></p> -->
@@ -147,35 +147,35 @@
     					</div>
     				</div>
     			</div>
-    			<div class="col-md-4">
+    			<!-- <div class="col-md-4">
     				<div class="car-wrap rounded ftco-animate">
     					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car-img2.jpeg);">
     					</div>
     					<div class="text">
     						<h2 class="mb-0"><a href="car-single.html">Mercedes Grand Sedan</a></h2>
     						<div class="d-flex mb-3">
-	    						<!-- <span class="cat">SUV</span>
-	    						<p class="price ml-auto">₹500 <span>/day</span></p> -->
+	    						<span class="cat">SUV</span>
+	    						<p class="price ml-auto">₹500 <span>/day</span></p>
     						</div>
-    						<!-- <p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single.html" class="btn btn-secondary py-2 ml-1">Details</a></p> -->
+    						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
     					</div>
     				</div>
-    			</div>
+    			</div> -->
 
-    			<div class="col-md-4">
+    			<!-- <div class="col-md-4">
     				<div class="car-wrap rounded ftco-animate">
     					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car-img3.jpeg);">
     					</div>
     					<div class="text">
     						<h2 class="mb-0"><a href="car-single.html">Mercedes Grand Sedan</a></h2>
     						<div class="d-flex mb-3">
-	    						<!-- <span class="cat">SUV</span>
-	    						<p class="price ml-auto">₹500 <span>/day</span></p> -->
+	    						<span class="cat">SUV</span>
+	    						<p class="price ml-auto">₹500 <span>/day</span></p>
     						</div>
-    						<!-- <p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single.html" class="btn btn-secondary py-2 ml-1">Details</a></p> -->
+    						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
     					</div>
     				</div>
-    			</div>
+    			</div> -->
     			<!-- <div class="col-md-4">
     				<div class="car-wrap rounded ftco-animate">
     					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car-img4.jpeg);">
