--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 		    					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car-img1.jpeg);">
 		    					</div>
 		    					<div class="text">
-		    						<h2 class="mb-0"><a href="#">Totota</a></h2>
+		    						<h2 class="mb-0"><a href="#">Innova Hycross</a></h2>
 		    						<div class="d-flex mb-3">
 			    						<!-- <span class="cat">SUV</span>
 			    						<p class="price ml-auto">₹500 <span>/day</span></p> -->
@@ -195,7 +195,7 @@
 		    					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car-img2.jpeg);">
 		    					</div>
 		    					<div class="text">
-		    						<h2 class="mb-0"><a href="#">Fortuner</a></h2>
+		    						<h2 class="mb-0"><a href="#">Toyota Innova</a></h2>
 		    						<div class="d-flex mb-3">
 			    						<!-- <span class="cat">SUV</span>
 			    						<p class="price ml-auto">₹500 <span>/day</span></p> -->
@@ -206,10 +206,10 @@
     					</div>
     					<div class="item">
     						<div class="car-wrap rounded ftco-animate">
-		    					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car-img3.jpeg);">
+		    					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car-img6.jpeg);">
 		    					</div>
 		    					<div class="text">
-		    						<h2 class="mb-0"><a href="#">Sedan</a></h2>
+		    						<h2 class="mb-0"><a href="#">Tempo Traveller</a></h2>
 		    						<div class="d-flex mb-3">
 			    						<!-- <span class="cat">SUV</span>
 			    						<p class="price ml-auto">₹500 <span>/day</span></p> -->
@@ -220,10 +220,10 @@
     					</div>
     					<div class="item">
     						<div class="car-wrap rounded ftco-animate">
-		    					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car-img4.jpeg);">
+		    					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car-img5.jpeg);">
 		    					</div>
 		    					<div class="text">
-		    						<h2 class="mb-0"><a href="#">BMW</a></h2>
+		    						<h2 class="mb-0"><a href="#">Innova Crysta</a></h2>
 		    						<div class="d-flex mb-3">
 			    						<!-- <span class="cat">SUV</span>
 			    						<p class="price ml-auto">₹500 <span>/day</span></p> -->
@@ -306,9 +306,8 @@
                   <div class="user-img mb-2" style="background-image: url(images/customer-profile.jpg)">
                   </div>
                   <div class="text pt-4">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Roger Scott</p>
-                    <span class="position">Marketing Manager</span>
+                    <p class="mb-4">Booked a car rental for my family trip to Rajasthan, and Vedant Tours provided an excellent service. The car was clean, comfortable, and the driver was very polite. Will definitely book again!</p>
+                    <p class="name">Amit Sharma</p>
                   </div>
                 </div>
               </div>
@@ -317,9 +316,8 @@
                   <div class="user-img mb-2" style="background-image: url(images/customer-profile.jpg)">
                   </div>
                   <div class="text pt-4">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Roger Scott</p>
-                    <span class="position">Interface Designer</span>
+                    <p class="mb-4">I had an amazing experience with Vedant Tours! From hotel bookings to sightseeing, everything was perfectly arranged. The driver was professional and guided us to some hidden gems. Highly recommended for hassle-free travel!</p>
+                    <p class="name">Ritu Raj</p>
                   </div>
                 </div>
               </div>
@@ -328,9 +326,8 @@
                   <div class="user-img mb-2" style="background-image: url(images/customer-profile.jpg)">
                   </div>
                   <div class="text pt-4">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Roger Scott</p>
-                    <span class="position">UI Designer</span>
+                    <p class="mb-4">I needed an urgent car rental in Jaipur, and Vedant Tours arranged everything within minutes. The process was seamless, and the pricing was fair. Great service!</p>
+                    <p class="name">Ankesh Mishra</p>
                   </div>
                 </div>
               </div>
@@ -339,9 +336,8 @@
                   <div class="user-img mb-2" style="background-image: url(images/customer-profile.jpg)">
                   </div>
                   <div class="text pt-4">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Roger Scott</p>
-                    <span class="position">Web Developer</span>
+                    <p class="mb-4">Vedant Tours offers great travel packages at reasonable prices. We had an amazing road trip to Udaipur, and the experience was smooth from start to finish. Definitely booking with them again!</p>
+                    <p class="name">Abhishek Chauhan</p>
                   </div>
                 </div>
               </div>
@@ -350,9 +346,8 @@
                   <div class="user-img mb-2" style="background-image: url(images/customer-profile.jpg)">
                   </div>
                   <div class="text pt-4">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Roger Scott</p>
-                    <span class="position">System Analyst</span>
+                    <p class="mb-4">The team at Vedant Tours was always available to answer my queries. They helped customize my itinerary and ensured I had a hassle-free experience. Excellent service!</p>
+                    <p class="name">Aditya Raj</p>
                   </div>
                 </div>
               </div>
