--- a/car.html
+++ b/car.html
@@ -9,6 +9,14 @@
 
 
 	<meta name="keywords" content="car rental Udaipur, taxi services Udaipur, car hire Rajasthan, India car rental, best car rental services, Udaipur sightseeing taxi, hotel booking India, luxury car rental, Rajasthan tour packages, budget car hire, self-drive cars Udaipur, airport taxi Udaipur, India travel deals, holiday packages, best hotels in India, tourist taxi service, affordable car rental, travel agency Udaipur, taxi service rajasthan, car rental rajasthan, car hire udaipur, car rental best deals, vadent tours, vedanttours, vedant tour, vedanttour, vedanttours.com">
+
+	<meta name="author" content="Vedant Tours">
+    <meta name="robots" content="index, follow">
+    <meta name="language" content="English, Hindi, Rajasthani">
+    <meta name="geo.region" content="IN-RJ">
+    <meta name="geo.placename" content="Udaipur, Rajasthan, India">
+    <meta name="geo.position" content="24.5854;73.7125">
+    <meta name="ICBM" content="24.5854, 73.7125">
     
     <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
