--- a/index.html
+++ b/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Vedant Tours - A Car Service Platform.</title>
+    <title>Vedant Tours - Car Rentals, All India Tours, Hotel Booking, City Tours</title>
     <meta charset="utf-8">
+
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <meta name="description" content="🚗✨ Explore India with top-rated car rentals, luxury hotels, and exclusive travel deals! Book now for a hassle-free adventure and unbeatable prices! 🌍🔥">
+    <meta name="description" content="Vedant Tours - Reliable Car Rentals, Luxury Hotel Bookings, and Rajasthan Tour Packages. Explore India hassle-free with our affordable travel deals and premium taxi services. Book now for the best prices! 🚗🌍✨">
 
-
-    <meta name="keywords" content="car rental Udaipur, taxi services Udaipur, car hire Rajasthan, India car rental, best car rental services, Udaipur sightseeing taxi, hotel booking India, luxury car rental, Rajasthan tour packages, budget car hire, self-drive cars Udaipur, airport taxi Udaipur, India travel deals, holiday packages, best hotels in India, tourist taxi service, affordable car rental, travel agency Udaipur, taxi service rajasthan, car rental rajasthan, car hire udaipur, car rental best deals, vadent tours, vedanttours, vedant tour, vedanttour, vedanttours.com">
+    <meta name="keywords" content="Car Rental Udaipur, Taxi Services Udaipur, Car Hire Rajasthan, India Car Rental, Best Car Rental Services, Udaipur Sightseeing Taxi, Hotel Booking India, Luxury Car Rental Rajasthan, Rajasthan Tour Packages, Budget Car Hire India, Self-Drive Cars Udaipur, Airport Taxi Udaipur, India Travel Deals, Holiday Packages India, Best Hotels in India, Tourist Taxi Service Rajasthan, Affordable Car Rental Udaipur, Travel Agency Udaipur, Rajasthan Car Rental, Reliable Taxi Service Udaipur, Vedant Tours, VedantTours.com">
 
     <meta name="author" content="Vedant Tours">
     <meta name="robots" content="index, follow">
+    <meta name="language" content="English, Hindi, Rajasthani">
+    <meta name="geo.region" content="IN-RJ">
+    <meta name="geo.placename" content="Udaipur, Rajasthan, India">
+    <meta name="geo.position" content="24.5854;73.7125">
+    <meta name="ICBM" content="24.5854, 73.7125">
+
     
     <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
